fix menu text wrapping

--- a/mnote-components/vanilla/menu.scss
+++ b/mnote-components/vanilla/menu.scss
@@ -31,6 +31,7 @@ $theme: (
       margin: 0 0.4em;
       border-radius: 5px;
       cursor: pointer;
+      justify-content: space-between;
 
       &:hover {
         background: map-get($theme, bg-hover);
@@ -38,7 +39,7 @@ $theme: (
 
       .menu-item-right,
       .menu-item-left {
-        width: 100%;
+        width: fit-content;
       }
 
       .menu-item-right {
